fix gap

--- a/src/Pages/Watch/watch.scss
+++ b/src/Pages/Watch/watch.scss
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    gap: 8px;
+    gap: 10px;
 }
 
 .list li a {
@@ -48,10 +48,10 @@
 }
 
 .list__chap {
-    overflow: auto;
     width: 100%;
+    padding: 10px;
+    overflow: auto;
     height: 410px;
-    padding: 10px 15px;
     background-color: #1a1c21;
 
     scrollbar-width: none;
@@ -98,15 +98,4 @@
 
 video {
     width: 100%;
-}
-
-@media (max-width: 768px) {
-    .list {
-        gap: 3px;
-    }
-}
-@media (max-width: 576px) {
-    .list {
-        gap: 3px;
-    }
 }
